<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        tools:context=".TambahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_tambah"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsbold"/>

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_person"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:contentDescription="@string/gambar" />

        <Button
            android:id="@+id/buttonPilihFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_foto" />

        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/nama_pengguna"
            android:inputType="text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextKonfir"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/konfirmasi"
            android:inputType="textPassword"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"/>

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_simpan" />

    </LinearLayout>

</FrameLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>