<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="215dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:text="@string/apk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="28sp"
        android:textColor="@color/cardview_dark_background"
        android:id="@+id/apk"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apk"
        android:text="@string/kota"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="28sp"
        android:textColor="@color/cardview_dark_background"
        android:id="@+id/kota"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kota"
        android:text="@string/dinas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="20sp"
        android:textColor="@color/cardview_dark_background"
        android:id="@+id/dinas"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/dinas"
        android:padding="30dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:autofillHints="password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppinssemibold"
            android:layout_marginTop="20dp"
            android:text="@string/masuk" />


        <TextView
            android:id="@+id/textViewLupaPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/lupa"
            android:clickable="true"
            android:onClick="lupaPasswordClick"
            android:fontFamily="@font/poppinssemibold"
            android:focusable="true" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_layout" />

</RelativeLayout>
