<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg2"
    tools:context=".EntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_data"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsbold"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="start"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:id="@+id/tanggalTextView" />

        <Spinner
            android:id="@+id/spinnerKomoditi"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:entries="@array/komoditi_array" />

        <EditText
            android:id="@+id/editTextJumlahPasokan"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/jumlah_pasokan"
            android:inputType="text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextAsalPasokan"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/asal_pasokan"
            android:inputType="text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextHargaPasokan"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/harga_pasokan"
            android:inputType="numberDecimal"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextStok"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/stok"
            android:inputType="text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextHarga"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/harga"
            android:inputType="numberDecimal"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/spinnerKet"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:entries="@array/ket" />
        <!-- Tambahkan elemen XML lainnya untuk input data lainnya -->

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_simpan" />

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>